--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -1,6 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+
 body{
     font-family: "Merriweather", serif;
     font-weight: 400;
+}
+/* banner section starts here */
+.banner-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1320px;
+    min-height: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
+    background-image: url('../images/Banner.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+    /* creating opacity on image */
+    background-color: rgba(0,0,0,0.5);
+    background-blend-mode: overlay;
+}
+.banner-content{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.banner-content, p, h1{
+    color: white;
+}
+.banner-content h1{
+    color: rgb(255, 255, 255);
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 95px;
+    text-align: center;
+}
+.banner-content p{
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 40px;
+    text-align: center;
 }
