--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -51,3 +51,45 @@ body{
     line-height: 40px;
     text-align: center;
 }
+/* 65% section style starts here */
+.second-section-container{
+    width: 803px;
+    height: 806px;
+    margin: 0 auto;
+    margin-top: 90px;
+}
+.second-section-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.second-section-content h1{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 88px;
+    font-weight: 700;
+    margin-bottom:30px;
+}
+.second-section-content p{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.second-section-content h3{
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.image-container{
+    width: 802.9px;
+    height: 500px;  
+}
+.image-container img{
+    width: 100%;
+    height: 100%;  
+}
