--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -51,7 +51,9 @@ body{
     line-height: 40px;
     text-align: center;
 }
+
 /* 65% section style starts here */
+
 .second-section-container{
     width: 803px;
     height: 806px;
@@ -92,4 +94,127 @@ body{
 .image-container img{
     width: 100%;
     height: 100%;  
+}
+
+/* midnight styles starts here */
+
+.midnight-party-container{
+    margin: 0 auto;
+    max-width: 1320px;
+    height: 600px;
+    display: flex;
+    border-radius: 16px;
+    background-image: url('../images/midnight.png');
+    margin-top: 100px;
+}
+.leftside-content{
+    width:60%;
+    height:100%;
+    padding-left: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.leftside-content-div h1{
+    color: rgb(255, 255, 255);
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 15%;
+    text-align: left;
+}
+.leftside-content-div p{
+    color: rgba(255, 255, 255, 0.8);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+}
+.leftside-content-div button{
+    margin-left: 30px;
+    margin-top: 20px;
+    padding: 5px 8px;
+    background-color: transparent;
+    color:white;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.rightside-content{
+    width:40%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightside-img{
+    max-width: 349.16px;
+    max-height: 464.65px;
+}
+
+/* holiday styles  */
+
+
+.holiday-section-container{
+    position: relative;
+    width: 1320px;
+    height: 986.07px;
+    border:2px solid red;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+.holiday-text-content{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.holiday-text-content h5{
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+.holiday-text-content h1{
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 91px;
+    color:black;
+    margin: 10px;
+}
+#holiday{
+    color:red;
+}
+.holiday-text-content p{
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+.solid-color{
+    height:20%;
+    width:100%;
+    background-color: red;
+    position:absolute;
+    top: 80%;
+}
+.giftbox{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    width: 674.82px;
+    height: 577.96px;
+    top: 170px;
+    z-index: 2;
+}
+.discount{
+    position:relative;
+    width: 305.69px;
+    height: 305.69px;
+    bottom: 90px;
+    left: 50px;
+
 }
